--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,6790],[],[[5,0,6,[],[1,634,2851],[]],[7,0,8,[],[1,3487,311],[]],[9,0,10,[],[1,3801,99],[]],[11,0,12,[],[1,3901,404],[]],[13,0,14,[],[1,4307,2479],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,3368],[],[[5,0,6,[],[1,668,2696],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Checkoutitems","*d:\\Course\\RobotFramework\\Source\\SampleEcommerceRobotBDD\\tests\\checkoutitems.robot","eNq1jMENgzAQBFuJKCD7R8AjcSgAKnCsRSA4HTofon1MeshzZ0bbxMdsnNpqWjbWAEKNtx6WiUG/6r1F4am2Yiw0EWOUfeMnqQjL/kWvEODMnpFmplUPX5ySn3bLqvvbdYPYXWT8Rtg=","*<p>Checkout Items E2E\x3c/p>","*User Login To Apps","*<p>User Login To Apps\x3c/p>","*User Add Items To Cart","*<p>User Add Items To Cart\x3c/p>","*User Checkout Items","*<p>User Checkout Items\x3c/p>","*User Fill Information","*<p>User Fill Information\x3c/p>","*User Checkout Confirmation","*<p>User Checkout Confirmation\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*CheckoutItems","*d:\\Course\\RobotFramework\\Source\\SampleEcommerceRobotBDD\\Tests\\CheckoutItems.robot","eNq1jMENgzAQBFtBFMD+EfAIBilfnAYcaxERnC46G6V9CD3w3JnRNqFYjHNbzp+NNQBXo9fdEjHpW/NoQfhTW+FPGgkf5LtxiCrCc1/Rwzm8mHJCvzCuuudnpqTK/rLsbrtuELoDMhxGGA==","*<p>Checkout Items E2E\x3c/p>","*User Login To Apps","*<p>User Login To Apps\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Checkoutitems","name":"Checkoutitems","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"CheckoutItems","name":"CheckoutItems","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1684033959820;
+window.output["baseMillis"] = 1684518363874;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6816;
+window.output["generated"] = 3397;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
